Implemented asset and performance modules with backend APIs and frontend dashboards