@@ -26,56 +26,72 @@ public class AuthService {
     @Autowired
     private AuthenticationManager authenticationManager;
     
-    public AuthResponse register(RegisterRequest request) {
-        // Check if email exists
-        if (userRepository.existsByEmail(request.getEmail())) {
-            throw new RuntimeException("Email already registered");
+public AuthResponse register(RegisterRequest request) {
+
+    // 1. Check if email already exists
+    if (userRepository.existsByEmail(request.getEmail())) {
+        throw new RuntimeException("Email already registered");
+    }
+
+    // 2. Create new User
+    User user = new User();
+    user.setEmail(request.getEmail());
+    user.setPassword(passwordEncoder.encode(request.getPassword())); 
+    // ❌ DO NOT store plain password in DB (security risk)
+    // user.setPlainPassword(request.getPassword());
+
+    user.setFullName(request.getFullName());
+    user.setEmployeeId(request.getEmployeeId());
+    user.setMobile(request.getMobile());
+    user.setDepartment(request.getDepartment());
+    user.setDob(request.getDob());
+    user.setJoiningDate(request.getJoiningDate());
+
+    // 3. Role handling (safe & clean)
+    User.Role role = User.Role.EMPLOYEE; // default
+    if (request.getRole() != null && !request.getRole().trim().isEmpty()) {
+        try {
+            role = User.Role.valueOf(request.getRole().toUpperCase().trim());
+        } catch (IllegalArgumentException ignored) {
+            role = User.Role.EMPLOYEE;
         }
-        
-        // Create new user
-        User user = new User();
-        user.setEmail(request.getEmail());
-        user.setPassword(passwordEncoder.encode(request.getPassword()));
-        user.setPlainPassword(request.getPassword());
-        user.setFullName(request.getFullName());
-        user.setEmployeeId(request.getEmployeeId());
-        user.setMobile(request.getMobile()); // ✅ Added position
-        user.setDepartment(request.getDepartment());
-        
-        // ✅ FIXED: Use frontend role or default to EMPLOYEE
-        if (request.getRole() != null && !request.getRole().trim().isEmpty()) {
-            try {
-                user.setRole(User.Role.valueOf(request.getRole().toUpperCase().trim()));
-            } catch (IllegalArgumentException e) {
-                user.setRole(User.Role.EMPLOYEE); // Fallback
-            }
-        } else {
-            user.setRole(User.Role.EMPLOYEE); // Default if no role provided
-        }
-        
-        user.setStatus(User.Status.ACTIVE);
-        user.setOnboardingStatus(User.OnboardingStatus.NOT_STARTED);
-        
-        User savedUser = userRepository.save(user);
-        
-        // Generate JWT token
-        String token = jwtUtil.generateToken(new org.springframework.security.core.userdetails.User(
+    }
+    user.setRole(role);
+
+    // 4. Status defaults
+    user.setStatus(User.Status.ACTIVE);
+    user.setOnboardingStatus(User.OnboardingStatus.NOT_STARTED);
+
+    // 5. Save user
+    User savedUser = userRepository.save(user);
+
+    // 6. Generate JWT token with role authority
+    String token = jwtUtil.generateToken(
+        new org.springframework.security.core.userdetails.User(
             savedUser.getEmail(),
             savedUser.getPassword(),
-            java.util.Collections.emptyList()
-        ));
-        
-        return new AuthResponse(
-        	    token,
-        	    savedUser.getId(),
-        	    savedUser.getEmail(),
-        	    savedUser.getFullName(),     // ✅ fullName first
-        	    savedUser.getEmployeeId(),  // ✅ employeeId now correct
-        	    savedUser.getRole().name(),
-        	    savedUser.getOnboardingStatus().name()
-        	);
+            java.util.List.of(
+                new org.springframework.security.core.authority.SimpleGrantedAuthority(
+                    "ROLE_" + savedUser.getRole().name()
+                )
+            )
+        )
+    );
 
-    }
+    // 7. Return response
+    return new AuthResponse(
+        token,
+        savedUser.getId(),
+        savedUser.getEmail(),
+        savedUser.getFullName(),
+        savedUser.getEmployeeId(),
+        savedUser.getRole().name(),
+        savedUser.getOnboardingStatus().name(),
+        savedUser.getDob(),
+        savedUser.getJoiningDate()
+    );
+}
+
 
     
     public AuthResponse login(LoginRequest request) {
@@ -103,14 +119,16 @@ public class AuthService {
         userRepository.save(user);
         
         return new AuthResponse(
-            token,
-            user.getId(),
-            user.getEmail(),
-            user.getFullName(),
-            user.getEmployeeId(),
-            user.getRole().name(),
-            user.getOnboardingStatus().name()
-        );
+                token,
+                user.getId(),
+                user.getEmail(),
+                user.getFullName(),
+                user.getEmployeeId(),
+                user.getRole().name(),
+                user.getOnboardingStatus().name(),
+                user.getDob(),
+                user.getJoiningDate()
+            );
     }
     
     public User getCurrentUser() {
